--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Supercharge Your Social Media with AI Tools</h1>
-                <p>Generate captions, hashtags, scripts and more with our powerful AI tools. Save time and increase engagement across all social platforms.</p>
+                <p>Generate Content, hashtags, scripts and more with our powerful AI tools. Save time and increase engagement across all social platforms.</p>
                 <div class="cta-buttons">
                     <a href="#tools" class="cta-button"><i class="fas fa-bolt"></i> Explore Tools</a>
                     <a href="#how-it-works" class="cta-button secondary"><i class="fas fa-play-circle"></i> Watch Demo</a>
@@ -727,8 +727,8 @@
                     <div class="tool-icon">
                         <i class="fas fa-comment-dots"></i>
                     </div>
-                    <h3>Caption Generator</h3>
-                    <p>Create compelling captions for your posts that drive engagement and conversions.</p>
+                    <h3>AI Content Generator</h3>
+                    <p>Create compelling Content for your posts that drive engagement and conversions.</p>
                     <a href="/SMO-tool/Ai-tool.html" class="tool-link">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
